
add_subdirectory(TTXAdditionalTitle)
set_target_properties(TTXAdditionalTitle PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXAlwaysOnTop)
set_target_properties(TTXAlwaysOnTop PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXCallSysMenu)
set_target_properties(TTXCallSysMenu PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXCommandLineOpt)
set_target_properties(TTXCommandLineOpt PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXCopyIniFile)
set_target_properties(TTXCopyIniFile PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXFixedWinSize)
set_target_properties(TTXFixedWinSize PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXKcodeChange)
set_target_properties(TTXKcodeChange PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXOutputBuffering)
set_target_properties(TTXOutputBuffering PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXRecurringCommand)
set_target_properties(TTXRecurringCommand PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXResizeMenu)
set_target_properties(TTXResizeMenu PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXResizeWin)
set_target_properties(TTXResizeWin PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXShowCommandLine)
set_target_properties(TTXShowCommandLine PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXtest)
set_target_properties(TTXtest PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXttyrec)
set_target_properties(TTXttyrec PROPERTIES FOLDER TTXSamples)
set_target_properties(TTXttyplay PROPERTIES FOLDER TTXSamples)

add_subdirectory(TTXViewMode)
set_target_properties(TTXViewMode PROPERTIES FOLDER TTXSamples)


